# cross-sell-rl-research

./: README.md  pyproject.toml
config/: rl_nba_config.yml
configs/: default.yaml  enhanced.yaml
rl_nba/: .gitignore  README.md  pyproject.toml  requirements.txt
rl_nba/docs/: RL_for_cross_sell_overview.pptx  customer_state_and_journey_model.md  digital_twin_of_customer.md  rl_project_spec_draft.md
rl_nba/examples/: gym_quickstart.py  playback_dashboard.html  run_simulation.ipynb
rl_nba/examples/plots/: metrics.csv
rl_nba/src/rl_nba/: __init__.py  _playback_template.html  config.py  dtoc.py  features.py  journey.py  playback.py  run.py  serve.py  state.py
rl_nba/src/rl_nba/agents/: __init__.py  epsilon_greedy.py  linear.py  nonlinear.py  random_agent.py
rl_nba/src/rl_nba/data/: __init__.py  loader.py  schema.py  synthetic.py
rl_nba/src/rl_nba/environment/: __init__.py  gym_env.py  population.py  simulator.py
rl_nba/src/rl_nba/evaluation/: __init__.py  ope.py  plots.py  simulate.py
src/cross_sell_rl/: __init__.py  config.py  features.py  run.py  state.py
src/cross_sell_rl/agents/: __init__.py  base.py  epsilon_greedy.py  linear.py  random_agent.py
src/cross_sell_rl/data/: __init__.py  loader.py  schema.py  synthetic.py
src/cross_sell_rl/evaluation/: __init__.py  ope.py  plots.py  simulate.py
tests/: conftest.py  test_agents.py  test_config.py  test_data.py  test_enhanced.py  test_features.py  test_ope.py  test_run.py  test_simulator.py  test_state.py
